--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,36 @@
 		"unordered_map": "cpp",
 		"variant": "cpp",
 		"algorithm": "cpp",
-		"xstring": "cpp"
+		"xstring": "cpp",
+		"__tree": "cpp",
+		"any": "cpp",
+		"barrier": "cpp",
+		"cfenv": "cpp",
+		"charconv": "cpp",
+		"cinttypes": "cpp",
+		"codecvt": "cpp",
+		"condition_variable": "cpp",
+		"csetjmp": "cpp",
+		"csignal": "cpp",
+		"cuchar": "cpp",
+		"forward_list": "cpp",
+		"fstream": "cpp",
+		"future": "cpp",
+		"iomanip": "cpp",
+		"latch": "cpp",
+		"list": "cpp",
+		"map": "cpp",
+		"numbers": "cpp",
+		"regex": "cpp",
+		"scoped_allocator": "cpp",
+		"semaphore": "cpp",
+		"set": "cpp",
+		"shared_mutex": "cpp",
+		"source_location": "cpp",
+		"span": "cpp",
+		"syncstream": "cpp",
+		"typeindex": "cpp",
+		"unordered_set": "cpp",
+		"valarray": "cpp"
 	}
 }
