--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,37 @@
 		"syncstream": "cpp",
 		"typeindex": "cpp",
 		"unordered_set": "cpp",
-		"valarray": "cpp"
-	}
+		"valarray": "cpp",
+		"ostream": "cpp",
+		"atomic": "cpp",
+		"bit": "cpp",
+		"chrono": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
+		"coroutine": "cpp",
+		"cstddef": "cpp",
+		"exception": "cpp",
+		"expected": "cpp",
+		"functional": "cpp",
+		"iterator": "cpp",
+		"memory_resource": "cpp",
+		"random": "cpp",
+		"system_error": "cpp",
+		"tuple": "cpp",
+		"type_traits": "cpp",
+		"utility": "cpp",
+		"flat_map": "cpp",
+		"flat_set": "cpp",
+		"format": "cpp",
+		"generator": "cpp",
+		"numeric": "cpp",
+		"ranges": "cpp",
+		"spanstream": "cpp",
+		"stacktrace": "cpp",
+		"stdfloat": "cpp",
+		"stop_token": "cpp",
+		"text_encoding": "cpp",
+		"thread": "cpp"
+	},
+	"C_Cpp.default.compilerPath": "/usr/bin/g++"
 }
